@@ -25,6 +25,7 @@ setup(
     package_dir = {'': 'src'},
     namespace_packages=['z3c', 'z3c.recipe'],
     install_requires=[
+        'infrae.subversion',
         'setuptools',
         'zc.buildout',
         'zc.recipe.testrunner',
