@@ -15,8 +15,9 @@ def DocFileSuite(*args, **kw):
         zc.buildout.testing.install('zope.testing', test)
         zc.buildout.testing.install('zope.interface', test)
 
+        zc.buildout.testing.install('infrae.subversion', test)
+        zc.buildout.testing.install('py', test)
         zc.buildout.testing.install('zope.dottedname', test)
-
 
     def tearDown(test):
         zc.buildout.testing.buildoutTearDown(test)
